--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="nav">
             <div>
-                <p>Get the App</p>
+               <a href="#"><p>Get the App</p></a>
             </div>
             <ul class="nav-bar">
                 <li>Investor Relations</li>
