nav-bar Link CSS update

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                <a href="#"><p>Get the App</p></a>
             </div>
             <ul class="nav-bar">
-                <li>Investor Relations</li>
-                <li>Add restaurant</li>
-                <li>Log in</li>
-                <li>Sign up</li>
+                <a href="#"><li>Investor Relations</li></a>
+                <a href="#"><li>Add restaurant</li></a>
+                <a href="#"><li>Log in</li></a>
+                <a href="#"><li>Sign up</li></a>
             </ul>
         </div>
         <div class="head">
