--- a/index.html
+++ b/index.html
@@ -45,30 +45,30 @@
 
     <!-- Section -1  -->
     <section class="section-1">
-        <div class="section-1-item">
+        <a href="#" class="section-1-item">
             <div class="items-details">
                 <p>Order Food Online</p>
                 <p>Stay home ad order to your doorstep</p>
             </div>
             <img src="https://b.zmtcdn.com/webFrontend/e5b8785c257af2a7f354f1addaf37e4e1647364814.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*"
                 alt="">
-        </div>
-        <div class="section-1-item">
+        </a>
+        <a href="#" class="section-1-item">
             <div class="items-details">
                 <p>Dining</p>
                 <p>View the city's favourite dining venues</p>
             </div>
             <img src="https://b.zmtcdn.com/webFrontend/d026b357feb0d63c997549f6398da8cc1647364915.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*"
                 alt="">
-        </div>
-        <div class="section-1-item">
+        </a>
+        <a href="#" class="section-1-item">
             <div class="items-details">
                 <p>Nightlife & Club</p>
                 <p>Explore the city's top nightlife outlets</p>
             </div>
             <img src="https://b.zmtcdn.com/webFrontend/d9d80ef91cb552e3fdfadb3d4f4379761647365057.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*"
                 alt="">
-        </div>
+        </a>
     </section>
 
     <!-- SEction - 2 -->
