Sectioon-2 Link update

--- a/index.html
+++ b/index.html
@@ -71,74 +71,74 @@
         </a>
     </section>
 
-    <!-- SEction - 2 -->
+    <!-- Section - 2 -->
     <section class="section-2">
         <div class="section-2-heading">
             <p>Popular Locations in around the Delhi NCR</p>
         </div>
         <div class="section-2-container">
             <div class="section-2-items">
-                <div class="section-2-item">
+                <a href="#" class="section-2-item">
                     <p class="item-head">Connaught Place</p>
                     <p class="item-subhead">388 Places</p>
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
-                <div class="section-2-item">
+                </a>
+                <a href="#" class="section-2-item">
                     <p class="item-head">Connaught Place</p>
                     <p class="item-subhead">388 Places</p>
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
 
-                </div>
-                <div class="section-2-item">
+                </a>
+                <a href="#" class="section-2-item">
                     <p class="item-head">Connaught Place</p>
                     <p class="item-subhead">388 Places</p>
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
-                <div class="section-2-item">
+                </a>
+                <a href="#" class="section-2-item">
                     <p class="item-head">Connaught Place</p>
                     <p class="item-subhead">388 Places</p>
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
-                <div class="section-2-item">
+                </a>
+                <a href="#" class="section-2-item">
                     <p class="item-head">Connaught Place</p>
                     <p class="item-subhead">388 Places</p>
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
-                <div class="section-2-item">
+                </a>
+                <a href="#" class="section-2-item">
                     <p class="item-head">Connaught Place</p>
                     <p class="item-subhead">388 Places</p>
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
-                <div class="section-2-item">
+                </a>
+                <a href="#" class="section-2-item">
                     <p class="item-head">Connaught Place</p>
                     <p class="item-subhead">388 Places</p>
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
-                <div class="section-2-item">
+                </a>
+                <a href="#" class="section-2-item">
                     <p class="item-head">Connaught Place</p>
                     <p class="item-subhead">388 Places</p>
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
-                <div class="section-2-item">
+                </a>
+                <a href="#" class="section-2-item">
                     <p class="item-head">Connaught Place</p>
                     <p class="item-subhead">388 Places</p>
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
-                <div class="section-2-item">
+                </a>
+                <a href="#" class="section-2-item">
                     <p class="item-head">Connaught Place</p>
                     <p class="item-subhead">388 Places</p>
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
-                <div class="section-2-item">
+                </a>
+                <a href="#" class="section-2-item">
                     <p class="item-head">Connaught Place</p>
                     <p class="item-subhead">388 Places</p>
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
-                <div class="section-2-item">
+                </a>
+                <a href="#" class="section-2-item">
                     <p class="item-head">Connaught Place</p>
                     <p class="item-subhead">388 Places</p>
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
+                </a>
             </div>
         </div>
 
