Footer Link & img update

--- a/index.html
+++ b/index.html
@@ -17,13 +17,23 @@
     <header>
         <div class="nav">
             <div>
-               <a href="#"><p>Get the App</p></a>
+                <a href="#">
+                    <p>Get the App</p>
+                </a>
             </div>
             <ul class="nav-bar">
-                <a href="#"><li>Investor Relations</li></a>
-                <a href="#"><li>Add restaurant</li></a>
-                <a href="#"><li>Log in</li></a>
-                <a href="#"><li>Sign up</li></a>
+                <a href="#">
+                    <li>Investor Relations</li>
+                </a>
+                <a href="#">
+                    <li>Add restaurant</li>
+                </a>
+                <a href="#">
+                    <li>Log in</li>
+                </a>
+                <a href="#">
+                    <li>Sign up</li>
+                </a>
             </ul>
         </div>
         <div class="head">
@@ -169,7 +179,7 @@
                     <input type="email" name="" id="input-email" placeholder="Email">
                     <input type="button" value="Share App Link">
                 </div>
-                <div class="section-3-download">      
+                <div class="section-3-download">
                     <p>Download the app from</p>
                     <img src="https://b.zmtcdn.com/data/webuikit/23e930757c3df49840c482a8638bf5c31556001144.png" alt="">
                     <img src="https://b.zmtcdn.com/data/webuikit/9f0c85a5e33adb783fa0aef667075f9e1556003622.png" alt="">
@@ -184,25 +194,26 @@
             <p>Explore options near me</p>
         </div>
         <div class="section-5-items">
-            <div class="section-5-item">
+            <a href="#" class="section-5-item">
                 <p>Popular cuisines near me</p>
-            </div>
-            <div class="section-5-item">
+            </a>
+            <a href="#" class="section-5-item">
                 <p>Popular restaurant types near me</p>
-            </div>
-            <div class="section-5-item">
+            </a>
+            <a href="#" class="section-5-item">
                 <p>Top Restaurent Chains</p>
-            </div>
-            <div class="section-5-item">
+            </a>
+            <a href="#" class="section-5-item">
                 <p>Cities We Deliver To</p>
-            </div>
+            </a>
         </div>
     </section>
 
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-heading">
-            <img src="https://b.zmtcdn.com/web_assets/b40b97e677bc7b2ca77c58c61db266fe1603954218.png?fit=around|198:42&crop=198:42;*,*" alt="">
+            <img src="https://b.zmtcdn.com/web_assets/b40b97e677bc7b2ca77c58c61db266fe1603954218.png?fit=around|198:42&crop=198:42;*,*"
+                alt="">
         </div>
         <div class="footer-contents">
             <div class="footer-content">
@@ -210,13 +221,27 @@
                     <p>ABOUT ZOMATO</p>
                 </div>
                 <div class="footer-content-content">
-                    <p>Who We Are</p>
-                    <p>Blog</p>
-                    <p>Work With Us</p>
-                    <p>Investor Relations</p>
-                    <p>Report Fraud</p>
-                    <p>Press Kit</p>
-                    <p>Contact Us</p>
+                    <a href="#">
+                        <p>Who We Are</p>
+                    </a>
+                    <a href="#">
+                        <p>Blog</p>
+                    </a>
+                    <a href="#">
+                        <p>Work With Us</p>
+                    </a>
+                    <a href="#">
+                        <p>Investor Relations</p>
+                    </a>
+                    <a href="#">
+                        <p>Report Fraud</p>
+                    </a>
+                    <a href="#">
+                        <p>Press Kit</p>
+                    </a>
+                    <a href="#">
+                        <p>Contact Us</p>
+                    </a>
                 </div>
             </div>
             <div class="footer-content">
@@ -224,11 +249,21 @@
                     <p>ZOMAVERSE</p>
                 </div>
                 <div class="footer-content-content">
-                    <p>Zomato</p>
-                    <p>Blinkit</p>
-                    <p>Feeding India</p>
-                    <p>Hyperpure</p>
-                    <p>Zomaland</p>
+                    <a href="#">
+                        <p>Zomato</p>
+                    </a>
+                    <a href="#">
+                        <p>Blinkit</p>
+                    </a>
+                    <a href="#">
+                        <p>Feeding India</p>
+                    </a>
+                    <a href="#">
+                        <p>Hyperpure</p>
+                    </a>
+                    <a href="#">
+                        <p>Zomaland</p>
+                    </a>
                 </div>
             </div>
             <div class="footer-content">
@@ -236,14 +271,20 @@
                     <p>FOR RESTURANTS</p>
                 </div>
                 <div class="footer-content-content">
-                    <p>Pertner With Us</p>
-                    <p>Apps For You</p>
+                    <a href="#">
+                        <p>Pertner With Us</p>
+                    </a>
+                    <a href="#">
+                        <p>Apps For You</p>
+                    </a>
                 </div>
                 <div class="footer-content-heading">
                     <p>FOR ENTERPRISES</p>
                 </div>
                 <div class="footer-content-content">
-                    <p>Zomato For Enterprises</p>
+                    <a href="#">
+                        <p>Zomato For Enterprises</p>
+                    </a>
                 </div>
             </div>
             <div class="footer-content">
@@ -251,10 +292,18 @@
                     <p>LEARN MORE</p>
                 </div>
                 <div class="footer-content-content">
-                    <p>Privacy</p>
-                    <p>Security</p>
-                    <p>Terms</p>
-                    <p>Sitemap</p>
+                    <a href="#">
+                        <p>Privacy</p>
+                    </a>
+                    <a href="#">
+                        <p>Security</p>
+                    </a>
+                    <a href="#">
+                        <p>Terms</p>
+                    </a>
+                    <a href="#">
+                        <p>Sitemap</p>
+                    </a>
                 </div>
             </div>
             <div class="footer-content">
@@ -262,10 +311,42 @@
                     <p>SOCIAL LINKS</p>
                 </div>
                 <div class="footer-content-content">
-                    
+                    <a href="#">
+
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <a href="#">
+
+                        <i class="fa-brands fa-square-instagram"></i>
+                    </a>
+                    <a href="#">
+
+                        <i class="fa-brands fa-square-twitter"></i>
+                    </a>
+                    <a href="#">
+
+                        <i class="
+                        fa-brands fa-youtube"></i>
+                    </a>
+                    <a href="#">
+
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    <div class="footer-download">
+                        <a href="#">
+                            <img src="https://b.zmtcdn.com/data/webuikit/23e930757c3df49840c482a8638bf5c31556001144.png"
+                                alt="">
+                        </a>
+
+                        <a href="#">
+                            <img src="https://b.zmtcdn.com/data/webuikit/9f0c85a5e33adb783fa0aef667075f9e1556003622.png"
+                                alt="">
+                        </a>
+
+                    </div>
                 </div>
             </div>
-        
+
         </div>
     </footer>
 </body>
